支持名称大小写转换